# IOCAPI

./: .gitignore  README.md  pyproject.toml
src/iocapi/: config.py  dialog.py  rq.py  utils.py
src/iocapi/data/: random_so_data.csv
src/iocapi/data/dialog_logs/: iocapi_dialog_logs.json  kahaid_dialog_by_llm.csv  kahaid_dialog_logs.json
src/iocapi/get_top_k_q/: domain.py  get_top_k.py  util.py
src/iocapi/get_top_k_q/algorithm/: recommendation.py  similarity.py
src/iocapi/get_top_k_q/data/: .gitkeep
src/iocapi/prompts/: clarifier.md  coder.md  coder_no_clarifier.md  no_code.md
